Sortiranje po bodovima